Fix bottom margin on mobile

--- a/styles/contact-style.css
+++ b/styles/contact-style.css
@@ -6,6 +6,8 @@ h1 {
 .main-container {
     display: flex;
     flex-direction: column;
+    height: auto;
+    padding-bottom: 20%;
 }
 
 .contact-header {
@@ -16,6 +18,7 @@ h1 {
 
 .contact-grid {
     margin: 10%;
+    margin-bottom: 50px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     background: rgba(0, 0, 0, 0.5);;
@@ -125,6 +128,11 @@ h1 {
 }
 
 @media screen and (max-width: 1000px) {
+
+    .form-div {
+        margin-bottom: 30%;
+    }
+
     .contact-grid {
         display: list-item;
     }
@@ -145,9 +153,5 @@ h1 {
 
     .contact-item .icon {
         position: relative;
-    }
-
-    .contact-item .icon img {
-        
     }
 }
